5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1679_1100.log
== TEST (2019-04-25 17:56:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	elif (v==2):
		print("Entrada", v)
	


-- ERROR:
File "XXXX", line 6
    elif (v==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:56:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
elif (v==2):
		print("Entrada", v)
	


-- ERROR:
File "XXXX", line 6
    elif (v==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:56:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
elif:
	(v==2)
	print("Entrada", v)
	


-- ERROR:
File "XXXX", line 6
    elif:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:56:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	elif:
	(v==2)
	print("Entrada", v)
	


-- ERROR:
File "XXXX", line 6
    elif:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:57:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
elif:
	(v==2)
	print("Entrada", v)
	


-- ERROR:
File "XXXX", line 6
    elif:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:57:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
elif (v==2):
print("Entrada", v)
	

-- ERROR:
File "XXXX", line 6
    elif (v==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:57:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
elif (v==2):
print("Entrada", v)
	

-- ERROR:
File "XXXX", line 6
    elif (v==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:57:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
elif (v==2):
	print("Entrada", v)
	

-- ERROR:
File "XXXX", line 6
    elif (v==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:58:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=float(int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada", v)
	

-- ERROR:
File "XXXX", line 6
    elif (v==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:58:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: ")))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
	

-- ERROR:
File "XXXX", line 4
    v=int(input()))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:59:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
	

-- ERROR:
File "XXXX", line 4
    v=int(input()))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:59:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
	

-- EXECUTION TIME:
0.135773
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:

-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:49:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada: ", v)
	if (v==5):
		print("Entrada: ", v)
	

-- ERROR:
File "XXXX", line 4
    v=int(input()))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:49:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
	if (v==5):
		print("Entrada:", v)
	

-- ERROR:
File "XXXX", line 4
    v=int(input()))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:55:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
		print("Animal: Tartaruga")
	if (v==5):
		print("Entrada:", v)
	if (v==10):
		print("Entrada:", v)
	if (v==20):
		print("Entrada:", v)
	if (v==50):
		print("Entrada:", v)
	if (v==100):
		print("Entrada:", v)
else:
	print()
	

-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 20:59:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
		print("Animal: Tartaruga")
	if (v==5):
		print("Entrada:", v)
		print("Animal: Garca")
	if (v==10):
		print("Entrada:", v)
		print("Animal: Arara")
	if (v==20):
		print("Entrada:", v)
		print("Animal: Mico-leao-dourado")
	if (v==50):
		print("Entrada:", v)
		print("Animal: Onca-pintada")
	if (v==100):
		print("Entrada:", v)
		print("Animal: Garoupa")
else:
	print("Entrada:", v)
	print("Animal: Invalido")
	

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 20:59:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
v=int(input("Qua o valor da cedula?: "))
if (v==2 or v==5 or v==10 or v==20 or v==50 or v==100):
	if (v==2):
		print("Entrada:", v)
		print("Animal: Tartaruga")
	if (v==5):
		print("Entrada:", v)
		print("Animal: Garca")
	if (v==10):
		print("Entrada:", v)
		print("Animal: Arara")
	if (v==20):
		print("Entrada:", v)
		print("Animal: Mico-leao-dourado")
	if (v==50):
		print("Entrada:", v)
		print("Animal: Onca-pintada")
	if (v==100):
		print("Entrada:", v)
		print("Animal: Garoupa")
else:
	print("Entrada:", v)
	print("Animal: Invalido")
	

-- EXECUTION TIME:
0.219397
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
